# gmap-gui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE.txt  build.sh  main.cpp  makefile  meson.build  strings.go
TC/: tc-mingw.cmake
WIN/: run.bat
src/: genpatch.cpp  main.cpp  strings.cpp  utils.cpp
src/include/: common.hpp  genpatch.hpp  strings.hpp  utils.hpp
unused/: applypatch.c  genpatch.c
